# sibyl

./: .env.example  .gitignore  CHANGELOG.md  CONTEXT.md  DESIGN.md  LICENSE  README.md  RELEASING.md  SETUP.md  bin.ts  cli.ts  colors.ts  connections.test.ts  connections.ts  core.test.ts  core.ts  db.ts  guard.test.ts  guard.ts  introspect.test.ts  introspect.ts  isMain.ts  nl2sql.ts  ollama.test.ts  ollama.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  responseMapper.test.ts  responseMapper.ts  rowsEqual.test.ts  rowsEqual.ts  seed.sql  server.ts  setup.test.ts  setup.ts  suggestions.test.ts  suggestions.ts  tsup.config.ts  (+1 more)
.claude/: launch.json
.github/workflows/: release.yml
docs/: architecture-deepening-candidates.md
docs/adr/: 0001-conversation-state-lives-in-the-surface.md
evals/: conversations.json  dataset.json  run-conversations.ts  run.ts  shared.ts
issues/: gui-prd.md  prd.md
scripts/: bump-version.mjs  bundle-node.mjs  copy-web-dist.mjs  updater-manifest.mjs
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: AddConnectionModal.tsx  App.tsx  AssistantAnswer.tsx  CommandAnswer.tsx  Composer.tsx  EmptyState.tsx  ModelPicker.tsx  Onboarding.tsx  SibylMark.tsx  Sidebar.tsx  ThreadMessages.tsx  UpdateToast.tsx  api.ts  commands.test.ts  commands.ts  composerDispatch.test.ts  composerDispatch.ts  connectionState.test.ts  csv.ts  (+21 more)
(+5 files in other folders)
