[package]
name = "sibyl-desktop"
version = "0.7.3"
description = "Sibyl — ask your database in plain English"
authors = ["Jay Kalia"]
edition = "2021"

# The Rust here is deliberately thin: it opens a window on the built web UI and spawns
# the Node sidecar (the same Express server the CLI/web use). All product logic lives
# in TypeScript — see src/main.rs.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
